# devolutions-gateway

./: .copilotignore
devolutions-gateway/: Cargo.toml
devolutions-gateway/src/: config.rs
devolutions-gateway/src/api/: config.rs
devolutions-session/: Cargo.toml
devolutions-session/src/: lib.rs  main.rs
devolutions-session/src/dvc/: io.rs  mod.rs  now_message_dissector.rs  task.rs
jetsocat/src/: doctor.rs
webapp/src/client/app/modules/web-client/form/: web-client-form.component.ts
webapp/src/client/app/modules/web-client/rdp/: web-client-rdp.component.ts
